--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-04 11:49:57
+lastsearch = 2024-08-04 12:23:05
 
 [shopee.vn]
 match = -36.8%%
@@ -82,9 +82,9 @@ title = HOSE cần bản lĩnh để vượt qua mọi khó khăn và thử thá
 url = https://dangcongsan.vn/kinh-te/hose-can-ban-linh-de-vuot-qua-moi-kho-khan-va-thu-thach-667285.html
 
 [www.tiktok.com]
-match = -131.6%%
-title = Đốt cây tre em đo làm chiếu, nói yêu anh nói điêu làm chó
-url = https://www.tiktok.com/@thaotho7992/video/7231104761997659397
+match = -110.5%%
+title = Sống Ở Đời Mà Không Nhậu Không Cho Ai Nhậu Thì Sao
+url = https://www.tiktok.com/discover/sống-ở-đời-mà-không-nhậu-không-cho-ai-nhậu-thì-sao
 
 [www.bachhoaxanh.com]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = mẹo chơi tài xỉu trên điện thoại điện tử trực tuyến
 url = https://olympicenglish.vn/Poc/mẹo chơi tài xỉu trên điện thoại.shtm
 
 [m.facebook.com]
-match = -52.6%%
-title = REVIEW HỒ TRÀM ✅ | 💋💘🌟 𝐑𝐄𝐒𝐎𝐑𝐓 𝐈𝐗𝐎𝐑𝐀 𝐇𝐎̂̀ ...
-url = https://m.facebook.com/groups/919140211791483/posts/2061036980935128/
+match = -94.7%%
+title = TRANG VĂN CHƯƠNG MIỀN NAM | SÀI GÒN LẠ THIỆT…
+url = https://m.facebook.com/groups/395853348109312/posts/1045702769791030/
 
 [www.facebook.com]
 match = 5.3%%
@@ -215,4 +215,19 @@ url = https://vn.usembassy.gov/vi/renew-passports-by-postal-mail-or-express-drop
 match = -131.6%%
 title = Chiếu tre Bamboo - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
 url = https://betiti.com/san-pham/chieu-tre-bamboo/
+
+[www.flickr.com]
+match = -10.5%%
+title = Mai Ya Tang photos on Flickr
+url = https://www.flickr.com/photos/tags/Mai Ya Tang/
+
+[olm.vn]
+match = -163.2%%
+title = Viết bài văn kể lại cuộc trò chuyện của bức tường mới bị ...
+url = https://olm.vn/cau-hoi/viet-bai-van-ke-lai-cuoc-tro-chuyen-cua-buc-tuong-moi-bi-cac-ban-tre-ve-bay-voi-mot-cay-banggiup-minh-voi-mai-phai-nopppp.8746474874555
+
+[www.ngo-quyen.org]
+match = -94.7%%
+title = Phan Phú Hiệp - BEAUTIFUL SUNDAY - BÀI MỚI NHẤT
+url = https://www.ngo-quyen.org/p3590a7934/22/beautiful-sunday
 
