--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-04 09:23:56
+lastsearch = 2024-08-04 12:26:57
 
 [hoa18.com]
 match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
+url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
 
 [www.youtube.com]
-match = -89.5%%
-title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
-url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
+match = -142.9%%
+title = YouTube
+url = https://www.youtube.com/watch?v=wIGinEAhcXc
 
 [kallos.co]
 match = -105.3%%
