--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-04 11:40:07
+lastsearch = 2024-08-04 12:24:08
 
 [helloviettravel.com]
-match = -181.2%%
-title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
-url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
+match = -150.0%%
+title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -193.8%%
-title = Khám phá 18 Tầng địa ngục tại Làng du lịch Mỹ Khánh Cần Thơ
-url = https://www.youtube.com/watch?v=ql7G7p6JNJE
+match = -218.8%%
+title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
+url = https://www.youtube.com/watch?v=esnw2jXy9g0
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
