--- a/images/ruot-chan-hoi-warmdream-200x220/config.ini
+++ b/images/ruot-chan-hoi-warmdream-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 lastopen = 2024-06-07 01:01:31
 
 [search]
-lastsearch = 2024-08-04 10:44:02
+lastsearch = 2024-08-04 12:16:56
 
 [www.dreamland.vn]
 match = 20.8%%
@@ -30,4 +30,9 @@ url = https://vuanem.com/chan-ga-goi/ruot-chan
 match = -45.2%%
 title = Lydia Chan | The secret weapon against sweat : *Adidas ...
 url = https://www.instagram.com/lydia_hwso/p/CtLqugiOCyu/
+
+[organiccotton.vn]
+match = -6.5%%
+title = Ruột chăn chần bông hữu cơ mùa hè, organic blanket
+url = https://organiccotton.vn/products/cotonea-ruot-chan-bianca-mua-he-250g-m2
 
