--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-04 09:50:20
+lastsearch = 2024-08-04 12:19:18
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+match = 5.0%%
+title = Giường da hạng sang mã DV14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
 match = -105.0%%
@@ -182,9 +182,9 @@ title = Thảm nỉ trải giường có những kích thước nào?
 url = http://www.vatlieusan.com/tin-tuc/tham-ni-trai-giuong-co-nhung-kich-thuoc-nao-d102.html
 
 [sumika.vn]
-match = -85.0%%
-title = Giường bố là gì? Ưu điểm nổi bật của giường bố
-url = https://sumika.vn/giuong-bo-la-gi-uu-diem-noi-bat-cua-giuong-bo
+match = -90.0%%
+title = Giường xếp gấp gọn di động SUMIKA 386, rộng 70cm
+url = https://sumika.vn/giuong-xep-gap-gon-di-dong-sumika-386
 
 [sofaloctien.vn]
 match = -100.0%%
