--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-04 06:18:13
+lastsearch = 2024-08-04 12:18:39
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Singapore 150x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-singapore-150x190x09.html?srsltid=AfmBOopfm3Lhuq_xL9L2IhuocCAgScWoc_aoUa4U8HP9i62bScsw8oiT
+match = 5.3%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -58.3%%
-title = Where We Fly | Flights with TUI 2024 / 2025
+title = Where We Fly | Flights with TUI 2024 / ...
 url = https://www.tui.co.uk/flight/where-we-fly
 
 [www.seatrade-cruise.com]
