--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-04 15:14:53
+lastsearch = 2024-08-04 18:24:27
 
 [shopee.vn]
 match = -90.9%%
@@ -39,7 +39,7 @@ url = https://www.auto365thaibinh.vn/
 [proauto.vn]
 match = -77.3%%
 title = Dán Phim Cách Nhiệt 3M Thái Bình Cho Xe Hơi Chính Hãng
-url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html?srsltid=AfmBOopIo8r6BojvqKjc8RZ3bmkLP4eYWnRQbLbfdTvR4Tk5WP8mGWUu
+url = https://proauto.vn/dan-phim-cach-nhiet-3m-thai-binh-cho-xe-hoi-chinh-hang.html
 
 [auto365thaibinh.vn]
 match = -27.3%%
