--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-04 16:31:38
+lastsearch = 2024-08-04 18:26:08
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -19,7 +19,7 @@ url = https://nemgiakho.com/mua-nem-everon-180x200x15-gia-re-o-dau.html
 [everon.com.vn]
 match = 17.9%%
 title = Đệm Bông ép Extrafoam EVERON
-url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/?srsltid=AfmBOorG0LtZYGLic6dGUg-YKn3Xsmm2EFRd3E6A4vBxO13zJYaOEfEr
+url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/
 
 [nemeveron.com.vn]
 match = 42.9%%
