--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-04 15:35:27
+lastsearch = 2024-08-04 18:19:55
 
 [demxanh.com]
 match = -47.8%%
 title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html
+url = https://demxanh.com/ruot-goi-olympia.html?srsltid=AfmBOoq5Zztlyy1e3dIYNG9JsGFMoLjMDw4iOOENcknBIWoz7EhAgdjZ
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/Combo-2-ruột-gối-korea-cao-cấp-ép-hơi-kích-thư
 [everonvn.com.vn]
 match = -82.6%%
 title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
-url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
+url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay?srsltid=AfmBOoqj8UqDSJUUfmH2YLoVC_huxuVS9oN6IurzKykNkwpJ5hP3W7Hd
 
 [thegioidemviet.vn]
 match = -21.7%%
@@ -44,7 +44,7 @@ url = https://thegioidemonline.com/ruot-goi-bong.html
 [www.diepxuan.com]
 match = 21.7%%
 title = Điệp Xuân Ruột gối kê Everhome M 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html
+url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html?srsltid=AfmBOoqAlsf5KSixhL_wIAxhay3pJfKf_SRI9PDQFtJcKeTzED3ZCMhs
 
 [tiki.vn]
 match = -87.0%%
