--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-04 13:47:42
+lastsearch = 2024-08-04 18:17:29
 
 [www.tiktok.com]
-match = -187.5%%
-title = Got my glam done by the one & only @madebymitchell ...
-url = https://www.tiktok.com/@hudabeauty/video/7382275079893273886
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [digitalmaine.com]
 match = -75.0%%
