--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-04 13:38:35
+lastsearch = 2024-08-04 18:24:46
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,14 +132,14 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [som.cuanschutz.edu]
-match = -110.5%%
-title = Larry Allen, MD Professor, Medicine-Cardiology
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
+match = -121.1%%
+title = Rubin Tuder, MD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 5.3%%
+title = Margaret Tempero, MD
+url = https://profiles.ucsf.edu/margaret.tempero
 
 [profiles.stanford.edu]
 match = -36.8%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Evaluation of the Extent of Variant Histology in Urothelial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
+match = -200.0%%
+title = Triglyceride-rich lipoprotein lipolysis products increase blood ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5407020/
 
 [www.ucdavis.edu]
 match = -52.6%%
