--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-04 15:48:25
+lastsearch = 2024-08-04 18:51:13
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -25.0%%
-title = Chăn Ga Gối Đệm chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/chan-ga-goi-dem.html?srsltid=AfmBOoouFLcraK2HyCrjyWy5AihbcHzhCyVJ5peFK_qjb0JbCoiHOicN
+match = -8.3%%
+title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html?srsltid=AfmBOooBd4oDWWEmmEGguVnv9q4_c2kOj8oj9MaQyD1as8tjsnBnK_qq
 
 [changagoibenlinda.com]
 match = -12.5%%
