--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-04 13:39:15
+lastsearch = 2024-08-04 18:58:06
 
 [demxanh.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [suongtuyet.com]
-match = -29.6%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 18.5%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [russo.vn]
 match = -40.7%%
@@ -142,9 +142,9 @@ title = Chiếu Điều Hòa Là Gì? TOP 4 Chiếu Điều Hòa Hot Nhất ...
 url = https://khonemtonghop.com/chieu-dieu-hoa-la-gi/
 
 [olbedding.com]
-match = -25.9%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+match = -22.2%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 1 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-1/
 
 [www.nemuytin.com]
 match = -25.9%%
