--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-04 14:58:37
+lastsearch = 2024-08-04 18:53:15
 
 [shopee.vn]
 match = 19.4%%
@@ -17,9 +17,9 @@ title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
 url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
-match = 58.1%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 48.4%%
+title = Điệp Xuân Chiếu gấp Thái Bình 180x200
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x200.html
 
 [m.facebook.com]
 match = -6.5%%
