--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-04 15:42:17
+lastsearch = 2024-08-04 18:48:49
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqAIaLdYnK8iLuzznlc0-bY4EgR9R5lma8DQ59jvO9qaa7tOvXv
 
 [www.everonqb.com]
 match = -9.5%%
@@ -22,9 +22,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
 match = -61.9%%
