--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-04 16:00:39
+lastsearch = 2024-08-04 18:52:14
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOoobRE-mn3wi5mPJtgzJTjPp5YYj1aprUf5TyBrmKpluycgStQUx
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/tam-trai-everon
 [www.lazada.vn]
 match = -37.5%%
 title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/?srsltid=AfmBOorVv-S551KSIMWjZbDDaZNNvfQJSguhaS8fVwi_5aI1xFlf_cBf
 
 [www.everonvn.vn]
 match = -20.8%%
