--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-04 18:27:29
+lastsearch = 2024-08-04 21:46:46
 
 [www.everonvn.vn]
-match = -95.2%%
-title = Bảng giá các kích thước ruột gối Everon Standard Soft
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
+match = 66.7%%
+title = Ruột gối Everon 45 x 65
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -100.0%%
+title = Ruột gối đầu bông gòn cao cấp kháng khuẩn_mẫu hoa nhí ...
+url = https://shopee.vn/Ruột-gối-đầu-bông-gòn-cao-cấp-kháng-khuẩn_mẫu-hoa-nhí-hoa-trà_không-xẹp-không-vón-cục-kích-thước-45x65-i.549343397.11460957236
 
 [www.diepxuan.com]
 match = 4.8%%
@@ -32,9 +32,9 @@ title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
 url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 
 [www.lazada.vn]
-match = -85.7%%
-title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
+match = -57.1%%
+title = VỎ GỐI ĐẦU COTTON 45X65CM IN HỌA TIẾT NGỘ ...
+url = https://www.lazada.vn/products/vo-goi-dau-cotton-45x65cm-in-hoa-tiet-ngo-nghinh-cho-be-ruot-goi-bong-gon-tu-nhien-em-ai-thiet-ke-attenco-bh-3th-i1570200057.html
 
 [demxanh.com]
 match = -81.0%%
@@ -62,9 +62,9 @@ title = COMBO 2 RUỘT GỐI HOA HÚT CHÂN KHÔNG KT 45x65
 url = https://sieuthinguyenkim.com/combo-2-ruot-goi-hoa-hut-chan-nti112566557.html
 
 [www.everonqb.com]
-match = 19.0%%
-title = Ruột gối kê Everon 45x65 thư giãn cổ
-url = https://www.everonqb.com/ruot-goi-ke-everon-45x65-thu-gian-co.html
+match = 57.1%%
+title = Ruột gối kê Everon 45x65 Day
+url = https://www.everonqb.com/ruot-goi-ke-everon-45x65-day.html
 
 [foreverbedding.net]
 match = -95.2%%
@@ -85,4 +85,9 @@ url = https://changagoidemsonghong.online/ruot-goi-dau-song-hong.html
 match = 0.0%%
 title = 
 url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
+
+[m.thitruongsi.com]
+match = -57.1%%
+title = COMBO 2 ruột gối hoa hút chân không kt 45x65 giá sỉ
+url = https://m.thitruongsi.com/combo-2-ruot-goi-hoa-hut-chan-khong-kt-45x65-1551618.html
 
